--- a/Projeto 3/Projeto/menu.ui
+++ b/Projeto 3/Projeto/menu.ui
@@ -60,7 +60,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap>../Imagens/adicionar.png</pixmap>
+            <pixmap resource="arquivos.qrc">:/imagens/Imagens/adicionar.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -86,7 +86,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap>../Imagens/recarregar.png</pixmap>
+            <pixmap resource="arquivos.qrc">:/imagens/Imagens/recarregar.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -112,7 +112,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap>../Imagens/relatorio.png</pixmap>
+            <pixmap resource="arquivos.qrc">:/imagens/Imagens/relatorio.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -138,7 +138,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap>../Imagens/lixeira.png</pixmap>
+            <pixmap resource="arquivos.qrc">:/imagens/Imagens/lixeira.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -191,6 +191,8 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="arquivos.qrc"/>
+ </resources>
  <connections/>
 </ui>
