--- a/Projeto 3/Projeto/arquivos.qrc
+++ b/Projeto 3/Projeto/arquivos.qrc
@@ -4,5 +4,6 @@
         <file>Imagens/lixeira.png</file>
         <file>Imagens/recarregar.png</file>
         <file>Imagens/relatorio.png</file>
+        <file>Imagens/mercearia.png</file>
     </qresource>
 </RCC>
