--- a/Projeto 3/Projeto/verifica.ui
+++ b/Projeto 3/Projeto/verifica.ui
@@ -2,18 +2,21 @@
 <ui version="4.0">
  <class>Verifica</class>
  <widget class="QWidget" name="Verifica">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>260</width>
+    <height>252</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Escolha a Seção</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
