--- a/Projeto 3/Teste/Teste_Taylor/mainwindow.ui
+++ b/Projeto 3/Teste/Teste_Taylor/mainwindow.ui
@@ -66,7 +66,7 @@
     <property name="title">
      <string>Produto</string>
     </property>
-    <addaction name="action_Novo_Produto"/>
+    <addaction name="action_Cadastrar"/>
     <addaction name="action_Atualizar_Produto"/>
     <addaction name="action_Remover_Produto"/>
    </widget>
@@ -99,18 +99,21 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="action_Novo_Produto"/>
+   <addaction name="action_Cadastrar"/>
    <addaction name="action_Atualizar_Produto"/>
    <addaction name="action_Relatorio_Produtos"/>
    <addaction name="action_Remover_Produto"/>
   </widget>
-  <action name="action_Novo_Produto">
+  <action name="action_Cadastrar">
    <property name="icon">
     <iconset resource="Arquivos_de_Recursos.qrc">
      <normaloff>:/imagem/Imagens/adicionar.png</normaloff>:/imagem/Imagens/adicionar.png</iconset>
    </property>
    <property name="text">
-    <string>Novo Produto</string>
+    <string>Cadastrar</string>
+   </property>
+   <property name="toolTip">
+    <string>Cadastrar</string>
    </property>
   </action>
   <action name="action_Atualizar_Produto">
