--- a/Projeto 3/Teste/Teste_Taylor/cadastro.ui
+++ b/Projeto 3/Teste/Teste_Taylor/cadastro.ui
@@ -24,7 +24,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>824</width>
+        <width>827</width>
         <height>618</height>
        </rect>
       </property>
@@ -45,7 +45,7 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>804</width>
+            <width>807</width>
             <height>598</height>
            </rect>
           </property>
@@ -291,7 +291,7 @@
                  <bool>false</bool>
                 </property>
                 <property name="text">
-                 <string>Volume/Unidade:</string>
+                 <string>Volume em litros/Unidade:</string>
                 </property>
                </widget>
               </item>
@@ -299,6 +299,12 @@
                <widget class="QDoubleSpinBox" name="doubleSpinBox_Volume_por_Unidade">
                 <property name="enabled">
                  <bool>false</bool>
+                </property>
+                <property name="decimals">
+                 <number>2</number>
+                </property>
+                <property name="maximum">
+                 <double>100.000000000000000</double>
                 </property>
                </widget>
               </item>
