--- a/Projeto 3/Teste/Teste_Taylor/remover.ui
+++ b/Projeto 3/Teste/Teste_Taylor/remover.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>relatorio_de_fornecedores</class>
- <widget class="QWidget" name="relatorio_de_fornecedores">
+ <class>remover</class>
+ <widget class="QWidget" name="remover">
   <property name="geometry">
    <rect>
     <x>0</x>
